--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/exsys
 # 配置数据库jdbc
-spring.datasource.url=jdbc:mysql://localhost/demo?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/exam_sys?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.type-aliases-package=com.neuedu.examsys.domain
 mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.config-location=classpath:configuration/*.xml
