--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 # database config
-jdbc.driver=com.mysql.jdbc.Driver
+jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/exam_sys?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=123
